all kind of details, applied a bunch recommendations of PMD
git-svn-id: https://scm.mmbase.org/mmbase/trunk@44739 91430c5f-d668-0410-9e7d-dd663366dcfd